# json-rpc

./: cabal.project  cabal.project.ci  json-rpc.cabal
.github/workflows/: ci.yml
src/Network/: JsonRpc.hs
